[metadata]
name = pyroe
version = 0.1.0
author = "Dongze He, Rob Patro"
author_email = "dhe17@umd.edu, rob@cs.umd.edu"
description = Prepare a splici transcriptome
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/COMBINE-lab/pyroe
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent

[options]
packages = find:
package_dir =
    = src
scripts =
    bin/pyroe
python_requires = >=3.7
include_package_data = True
install_requires = 
    pandas >= 1.3.0
    pyranges >= 0.0.115
    biopython >= 1.77
    packaging >= 21.0

[options.extras_require]
scanpy = 
  scanpy >= 1.8.2

[options.packages.find]
where = src
